# walletcore

./: CMakeLists.txt  README.md
examples/cpp/: main.cpp
include/wallet_core/: base.h  derivation_path.h  hd_wallet.h  private_key.h  public_key.h  tron.h  walletcore.h
java/: .gitignore  build.gradle.kts  settings.gradle.kts
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/com/github/militch/walletj/: CoinType.java  HDWallet.java  NativeLibraryLoader.java  NativeLibraryUtil.java  PlatformUtils.java  SystemPropertyUtil.java  ThrowableUtil.java
jni/: jni_base.h  jni_hd_wallet.cpp  jni_hd_wallet.h
src/: attributes.h  base58.cpp  base58.h  bip32.cpp  bip32.h  curve.cpp  curve.h  derivation_path.cpp  hash.h  hd_wallet.cpp  keccak.c  keccak.h  prevector.h  private_key.cpp  public_key.cpp  serialize.h  span.h  tron.cpp  uint256.cpp  uint256.h
src/compat/: assumptions.h  byteswap.h  cpuid.h  endian.h
src/crypto/: common.h  hex_base.cpp  hex_base.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/util/: strencodings.cpp  strencodings.h  string.cpp  string.h
